Update junit dependency, remove guava dependency